crates/compiler/tests/parse_errors/port_module_decl.txt
-- UNFINISHED PORT MODULE DECLARATION ----------------------------- src/Main.elm

I am parsing an `port module` declaration, but I got stuck here:

1| port modxule Main exposing (..)
        ^
Here are some examples of valid `port module` declarations:

    port module WebSockets exposing (send, listen, keepAlive)
    port module Maps exposing (Location, goto)

Note: Read <https://elm-lang.org/0.19.1/ports> for more help.

